deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tripviewer-ingress-static
  namespace: web
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/user-java/(.*)
        pathType: Prefix
        backend:
          service:
            name: user-java-service
            port: 
              number: 80
      paths:
      - path: /api/user/(.*)
        pathType: Prefix
        backend:
          service:
            name: userprofile-service
            port: 
              number: 80
      paths:
      - path: /trips/user/(.*)
        pathType: Prefix
        backend:
          service:
            name: trips-service
            port: 
              number: 80
      paths:
      - path: /api/poi/(.*)
        pathType: Prefix
        backend:
          service:
            name: poi-service
            port: 
              number: 80
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tripviewer-service
            port: 
              number: 80
